apps/media/sonarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sonarr-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: sonarr.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: sonarr-tls
